4.5 -> 5.0:
    - jbj: insturment headerNextIterator() statistics.
    - jbj: trade a double free for a modest memory leak for the moment.
    - jbj: fix: install modes broken by forgetting to add '\0'.
    - jbj: mostly unbork HEAD. --install modes still non-functional.
    - jbj: don't modify strings exposed by method wrappers (#349091).
    - jbj: drill headerAddExtension everywhere.
    - jbj: header.c: insturment headerGet{Entry,Extension} switch, debug goop.
    - jbj: rpmchecksig.c: wrap headerAddEntry. headerAddOrAppend next ...
    - jbj: rpmfc.c: wrap headerAddEntry.
    - jbj: psm.c: wrap headerAddEntry.
    - jbj: hmm, still segfaults, more to do.
    - jbj: change headerGetEntry prototype, use headerGetExtension instead.
    - jbj: fix: hae needs he->p.ptr, not he->p, as 4th arg.
    - jbj: start rearranging header.h prior to moving typedefs to rpmtag.h.
    - jbj: rewrite several toy routines to use HE_t instead.
    - jbj: replace hRET_t with rpmTagType, avoiding "hRET_t *" issues for now.
    - jbj: hmmm, b0rken --fileclass et al extensions in lib/format.c, todo++.
    - jbj: mark private extension handling for destruction, enabled for now.
    - jbj: permit headerSprintf tbls/exts args tp be NULL using sane default.
    - jbj: start using headerGetExtension under headerSprintf.
    - jbj: prime the tag data cache earlier.
    - jbj: enable Plan B tag data caching.
    - jbj: grr, Plan B: cache w sprintfTag, not sprintfToken.
    - jbj: use tag data cache.
    - jbj: add tag data cache.
    - jbj: eliminate rpmec data type.
    - jbj: merge rpmec into HE_t.
    - jbj: not yet for binary search retrieve using tagValue.
    - jbj: unbork --yaml.
    - rpm.org: rpmpsi iterator.
    - jbj: mark myTagName() and myTagValue() linear lookup for destruction.
    - jbj: create rpmdb/rpmtag.h, split from lib/rpmlib.h.
    - jbj: make the --info field colons align correctly, more (#323221).
    - jbj: fix :time and :date formats, pad --info spewage.