@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: update loader maps for python lazy loads. rpm-python fixing to do.
     - jbj: insturment headerNextIterator() statistics.
     - jbj: trade a double free for a modest memory leak for the moment.
     - jbj: fix: install modes broken by forgetting to add '\0'.
